# tucanow

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in
cmake/: BuildDocumentation.cmake
deprecated/: main_spheres.cpp  main_window.hpp
include/: gui.hpp  main_window.hpp  misc.hpp  scene.hpp  simple_widget.hpp
include/tucanow/: definitions.hpp  gui.hpp  misc.hpp  object_definitions.hpp  phong_gui.hpp  scene.hpp  sphere.hpp
src/: gui.cpp  gui_impl.hpp  init_glew.hpp  main.cpp  main_load_ply.cpp  main_window.cpp  misc.cpp  phong_gui.cpp  scene.cpp  scene_impl.cpp  scene_impl.hpp  simple_widget.cpp  simple_widget.hpp  sphere.cpp  tucano_widget_impl.hpp  tucanow_gui.cpp  tucanow_gui.hpp  widget_data.hpp
src/tucano/: .git-repo  .gitlab-ci.yml  Doxyfile
src/tucano/samples/flyscene/: flyscene.hpp
src/tucano/samples/imgproc/: CMakeLists.txt  main.cpp  texturewidget.cpp
src/tucano/samples/phongViewer/: main.cpp
src/tucano/samples/rendering/: CMakeLists.txt
src/tucano/samples/shadowmap/: CMakeLists.txt  phongshadowmap.hpp  shadowmap.hpp  simplewidget.cpp  simplewidget.hpp
src/tucano/samples/shadowmap/shaders/: shadowbuffer.frag
src/tucano/samples/simpleTexture/: CMakeLists.txt  texturewidget.cpp
src/tucano/tucano/: camera.hpp  mesh.hpp  model.hpp  shader.hpp  tucano.hpp
src/tucano/tucano/effects/: computeShaderTest.cpp  directcolor.hpp  orennayar.hpp  phongshader.hpp  phongshadowmap.hpp  shadowmap.hpp  toon.hpp  wireframe.hpp
src/tucano/tucano/effects/shaders/: directcolor.vert  phongshadow.frag  rendertexture.frag  toonshader.frag  toonshader.vert  wireframe.frag  wireframe.geom
src/tucano/tucano/gui/: element.hpp  selectgroup.hpp  slider.hpp
src/tucano/tucano/shapes/: arrow.hpp  box.hpp  camerarep.hpp  cone.hpp  coordinateaxes.hpp  cylinder.hpp  frustrum.hpp  plane.hpp  quad.hpp  sphere.hpp
src/tucano/tucano/utils/: bezierspline.hpp  freecamera.hpp  imageIO.hpp  math.hpp  misc.hpp  pamIO.hpp  plyimporter.hpp  pngIO.hpp  polynomial.hpp  ppmIO.hpp  qtfreecamerawidget.hpp  trackball.hpp
src/tucano_local/: CMakeLists.txt  Doxyfile
src/tucano_local/doc/: welcome.md
src/tucano_local/samples/: CMakeLists.txt
src/tucano_local/samples/flyscene/: CMakeLists.txt  flyscene.cpp  main.cpp
src/tucano_local/samples/images/: random.ppm
src/tucano_local/samples/imgproc/: texturewidget.hpp
src/tucano_local/samples/phongViewer/: CMakeLists.txt  simplewidget.cpp  simplewidget.hpp
src/tucano_local/samples/rendering/: glwidget.cpp  glwidget.hpp  main.cpp
src/tucano_local/samples/shadowmap/: boundingbox.hpp  cascadedshadowmap.hpp  main.cpp
src/tucano_local/samples/shadowmap/shaders/: phongshadow.frag  phongshadow.vert  rendershadowmap.frag
src/tucano_local/samples/simpleTexture/: main.cpp  texturewidget.hpp
src/tucano_local/tucano/: effect.hpp  model.hpp  texturemanager.hpp
src/tucano_local/tucano/effects/: blurrednormalmap.hpp  camerabuffer.hpp  computeShaderTest.hpp  directcolor.hpp  gradientfilter.hpp  meanfilter.hpp  normalmap.hpp  picking.hpp  renderbuffer.hpp  rendertexture.hpp  ssao.hpp
src/tucano_local/tucano/effects/shaders/: directcolor.frag  phongshader.frag  wireframe.geom
src/tucano_local/tucano/gui/: base.hpp  button.hpp  groupbox.hpp  guishaders.hpp  label.hpp  selectbutton.hpp
src/tucano_local/tucano/shapes/: cylinder.hpp  frustrum.hpp  plane.hpp
src/tucano_local/tucano/utils/: flycamera.hpp  imageIO.hpp  objimporter.hpp  path.hpp  ppmIO.hpp  qtflycamerawidget.hpp  qttrackballwidget.hpp  trackball.hpp
win32-libs/: CMakeLists.txt  get_eigen-3.3.7_win32.cmake  get_glew-2.1.0_win32.cmake
